karl package Changelog
======================

Unreleased
----------

- The wiki links would not work for non-ascii characters because the
  title was saved as unicode and the text as html entities, causing
  the link matching code to return zero matches. Added function to
  unescape entities from links before comparison to fix this.

- LP #530799 (partial): Converted the following forms to use formish
  instead of enformed for form generation and validations: profile edit,
  admin profile edit, add user, add news item, edit news item, add
  intranet, edit intranet, edit intranets root, add page, edit page.

3.23 (2010-03-16)
-----------------

- LP #538272: Fixed add / edit community forms to pass the page_title
  in to the TemplateAPI object instead of directly to the template.

- LP #533366 Added simple retry capability to run_daemon, primarily to 
  avoid tripping the error monitor when conflict errors ocurr.

- LP #538273:  Added a '--timeout' option to 'update_feeds' script:  if
  passed, sets the global socket timeout accordingly.

3.22 (2010-03-12)
-----------------

- LP #530893 Updated mail sending code to use repoze.sendmail 2.0.

- LP #520570:  redirect '/favicon.ico' requests onto the correct static
  URL, and 'rss_view.xml' requests to the equivalent 'atom.xml' URLs.

- LP #530893 Added handling for RFC 2047 (Unicode) headers to all generated
  emails.

- LP #530893 Added handling for RFC 2047 (Unicode) headers to mailin.

- LP #531360 Fixed bug in people import where categories were not being
  properly reset at import time.

3.21 (2010-03-06)
-----------------

- Created a default policy for IShowSendalert.  Refactored code to use a
  utility method, get_show_sendalert, to get whether or not to show a send
  alert checkbox in a form adding content.

3.20 (2010-03-04)
-----------------

- Updated bootstrap to provide new 'name' parameter to add_intranet_view when
  creating offices.

- LP #530966, CSS fix for profile bug.  (Derek via Paul)
